# xfce4-mount-plugin

./: .gcc-analyzer-false-positives  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure.ac  configure.ac.in  libtool  meson.build  xfce4-mount-plugin.spec  xfce4-mount-plugin.spec.in
doc/: Doxyfile
doc/html/: annotated.html  config_8h.html  devices_8c.html  devices_8c__incl.dot  devices_8c__incl.md5  devices_8h.html  devices_8h__dep__incl.dot  devices_8h__dep__incl.md5  devices_8h__incl.dot  devices_8h__incl.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  helpers_8c.html  helpers_8c__dep__incl.dot  helpers_8c__dep__incl.md5  helpers_8c__incl.dot  helpers_8c__incl.md5  icons_8h.html  icons_8h__dep__incl.dot  icons_8h__dep__incl.md5  index.html  mount-plugin_8c.html  mount-plugin_8c__incl.dot  mount-plugin_8c__incl.md5  mount-plugin_8h.html  mount-plugin_8h__dep__incl.dot  mount-plugin_8h__dep__incl.md5  mount-plugin_8h__incl.dot  mount-plugin_8h__incl.md5  structs__disk.html  structs__disk__coll__graph.dot  structs__disk__coll__graph.md5  (+7 more)
icons/: Makefile.am  meson.build
m4/: glib-gettext.m4  pkg.m4
panel-plugin/: Makefile  Makefile.am  Makefile.in  devices.c  devices.h  helpers.c  helpers.h  icons.h  meson.build  mount-plugin.c  mount-plugin.h  xfce4-mount-plugin.desktop.in  xfce4-mount-plugin.desktop.in.in
panel-plugin/.libs/: libmount.lai
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.gmo  de.po  el.gmo  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.gmo  fr.po  gl.po  he.po  hr.po  hu.gmo  hu.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ko.gmo  ko.po  lt.gmo  (+32 more)
