hicolor48dir = $(datadir)/icons/hicolor/48x48/apps

hicolor48_DATA = \
	xfce-mount.png
	
hicolorSVGdir = $(datadir)/icons/hicolor/scalable/apps

hicolorSVG_DATA = \	
	xfce-mount.svg

EXTRA_DIST = $(hicolor48_DATA) $(hicolorSVG_DATA)
	
gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
